k8s/model-serving/model-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-server-svc
  namespace: default
spec:
  selector:
    app: model-server
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
