k8s/model-serving/model-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: model-server-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: model.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: model-server-svc
                port:
                  number: 80
